--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "next-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "classnames": "^2.5.1",
-    "framer-motion": "^11.2.10",
-    "gsap": "^3.12.5",
-    "lucide-react": "^0.383.0",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-intersection-observer": "^9.10.2",
-    "sass": "^1.77.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "next-portfolio",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start -p 4200",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"classnames": "^2.5.1",
+		"framer-motion": "^11.2.10",
+		"gsap": "^3.12.5",
+		"lucide-react": "^0.383.0",
+		"next": "14.2.3",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-intersection-observer": "^9.10.2",
+		"sass": "^1.77.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.3",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
