fix:[master-xxx][Vadim]: updated code and added more projects

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
 server {
-	server_name www.thekinv.website;
-	return 301 https://thekinv.website$request_uri;
+	server_name www.vadimkiniabaev.site;
+	return 301 https://vadimkiniabaev.site$request_uri;
 }
 
 server {
-	server_name portfolio.thekinv.website;
+	server_name portfolio.vadimkiniabaev.site;
 
 	gzip on;
 	gzip_proxied any;
@@ -14,7 +14,7 @@ server {
 	gzip_min_length 256;
 
 	location /\_next/static/ {
-		alias /var/www/portfolio-app/.next/static/;
+		alias /var/www/portfolio/.next/static/;
 		expires 365d;
 		access_log off;
 	}
@@ -29,18 +29,3 @@ server {
 	}
 }
 
-server {
-	server_name thekinv.website;
-
-	location / {
-	root /var/www/deployment;
-	try_files $uri /index.html;
-	client_max_body_size 100M;
-	}
-
-	location /deployment-be/api/ {
-	proxy_pass http://127.0.0.1:8080;
-	proxy_set_header Host $host;
-	client_max_body_size 100M;
-	}
-}
