--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
 	"name": "next-portfolio",
-	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -10,24 +9,21 @@
 	},
 	"dependencies": {
 		"classnames": "^2.5.1",
-		"framer-motion": "^11.2.10",
+		"framer-motion": "^11.11.8",
 		"gsap": "^3.12.5",
-		"lucide-react": "^0.383.0",
-		"next": "14.2.3",
-		"react": "^18",
-		"react-dom": "^18",
-		"react-intersection-observer": "^9.10.2",
-		"sass": "^1.77.4"
+		"lucide-react": "^0.452.0",
+		"next": "14.2.15",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"react-intersection-observer": "9.13.1",
+		"sass": "1.79.5"
 	},
 	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.3",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
-	},
-	"packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
+		"@types/node": "22.7.5",
+		"@types/react": "18.3.11",
+		"@types/react-dom": "18.3.1",
+		"postcss": "8.4.47",
+		"tailwindcss": "3.4.13",
+		"typescript": "5.6.3"
+	}
 }
