--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
 	},
 	"dependencies": {
 		"classnames": "^2.5.1",
-		"framer-motion": "^11.11.8",
+		"framer-motion": "11.14.4",
 		"gsap": "^3.12.5",
-		"lucide-react": "^0.452.0",
+		"lucide-react": "0.468.0",
 		"next": "14.2.15",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-intersection-observer": "9.13.1",
-		"sass": "1.79.5"
+		"react-intersection-observer": "9.14.0",
+		"sass": "1.83.0"
 	},
 	"devDependencies": {
-		"@types/node": "22.7.5",
+		"@types/node": "22.10.2",
 		"@types/react": "18.3.11",
 		"@types/react-dom": "18.3.1",
-		"postcss": "8.4.47",
-		"tailwindcss": "3.4.13",
-		"typescript": "5.6.3"
+		"postcss": "8.4.49",
+		"tailwindcss": "3.4.16",
+		"typescript": "5.7.2"
 	}
 }
