--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-intersection-observer": "9.14.0",
-		"sass": "1.83.0"
+		"sass": "1.83.0",
+		"sharp": "^0.33.1"
 	},
 	"devDependencies": {
 		"@types/node": "22.10.2",
